--- a/index.html
+++ b/index.html
@@ -3,24 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="http://code.jquery.com/jquery-3.4.1.js">
-    </script>
-    <script>
-      $(document).ready(function() {
-        $("#s1").click(function() {
-          $("#big1").fadeIn(1000);
-        });
-        $("#big1").click(function() {
-          $("#big1").fadeOut(1000);
-        });
-      });
     </script>
   </head>
   <body>
-    <div id="gallery">
-      <img src="siro.jpg"  width="200" height="150"><br>
-      <img src="siro.jpg" id="s1"  width="200" height="150"><br>
-      <img src="siro.jpg" id="big1" class="Bigimg" width="400" height="300"><br>
-    </div>
+    <h1>20191820 오혜린 웹프로그래밍실습</h1> <hr>
+    <a href="ex1.html" target="_blank">fadeIn/fadeOut 실습</a>
+    <a href="ex2.html" target="_blank">예제2 실습</a>
+    <a href="ex3.html" target="_blank">slide 예제1 실습</a>
+    <a href="ex4.html" target="_blank">slide 예제2 실습</a>
   </body>
 </html>
